--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "knex": "^0.20.8",
     "pg": "^7.18.1",
     "sqlite3": "^4.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1"
   }
 }
