--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.8",
     "pg": "^7.18.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
