--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "knex": "^0.20.8",
     "pg": "^7.18.1",
     "sqlite3": "^4.1.1",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "validatorjs": "^3.18.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
